[tool.poetry]
name = "aws-etl-job"
version = "0.0.1"
description = "Demonstration"
authors = ["Zachary Levonian <zach@levi.digitalharbor.org>"]
license = "MIT"
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.10"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
